# parameter-golf

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  PROJECT.md  README.md  conftest.py  pyproject.toml  requirements.txt  train_gpt.py  train_gpt_mlx.py
.claude/agents/: agent-maintainer.md  docs-writer.md  fineweb-data-maintainer.md  records-curator.md  training-run-analyst.md  training-script-maintainer.md
.github/agents/: agent_maintainer.agent.md  docs_writer.agent.md  fineweb_data_maintainer.agent.md  records_curator.agent.md  training_run_analyst.agent.md  training_script_maintainer.agent.md
.github/instructions/: agent_maintenance_workflow.instructions.md  code_writing_behavior.instructions.md  delegation_policy.instructions.md  python_quality_gates.instructions.md  python_training.instructions.md  qa_readonly.instructions.md  records.instructions.md
.github/skills/fineweb-data-workflow/: SKILL.md
.github/skills/python-linting/: SKILL.md
.github/skills/python-testing/: SKILL.md
.github/skills/records-curation/: SKILL.md
data/: training_manifest.py
scripts/: build_train_gpt_mlx.py  log_metrics.py  verify_baseline_log.py  verify_baseline_stability.py
tests/: test_baseline_runtime_contracts.py  test_build_train_gpt_mlx.py  test_foundation_guardrails.py  test_verify_baseline_log.py  test_verify_baseline_stability.py
train_gpt_mlx_src/: _runtime.py  config.py  data.py  eval.py  model.py  optimizer.py  orchestration.py  quantization.py
