[project]
name = "parameter-golf"
version = "0.1.0"
description = "Training and submission scaffolding for the Parameter Golf challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "huggingface-hub>=1.11.0",
    "kernels>=0.13.0",
    "numpy>=2.4.4",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "typing-extensions==4.15.0",
    "mlx>=0.22.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
linters = [
    "pre-commit>=3.7.0,<4.0.0",
    "black>=24.4.0,<25.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pylint>=3.2.0,<4.0.0",
    "flake8>=7.0.0,<8.0.0",
    "flake8-pyproject>=1.2.4,<2.0.0",
    "isort>=5.13.2,<6.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0,<4.0.0",
    "pre-commit-hooks>=4.6.0,<7.0.0",
    "black>=24.4.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
    "flake8>=7.0.0,<8.0.0",
    "flake8-pyproject>=1.2.4,<2.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pylint>=3.2.0,<4.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 88
extend-exclude = """
/(
  data/datasets
)/
"""

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]
exclude = [".venv", "data/datasets"]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
files = ["train_gpt.py", "train_gpt_mlx.py", "data"]
exclude = "(^data/datasets/)"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["data/datasets/**"]
